--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-giants-e2e",
   "version": "1.0.0",
-  "description": "repository as a Recruitment task",
+  "description": "End-to-end test automation project for a recruitment task",
   "author": "Jan Zadumiński",
   "license": "ISC",
   "scripts": {
